# cowpyprotocol

./: .gitignore  Dockerfile  Justfile  README.md  database  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: local-orderbook.toml
docs/: ARCHITECTURE.md
scripts/: setup_db.py  smoke_test.py
tests/e2e/: test_happy_path.py
tests/integration/: test_orders_db.py
